source/teacher/.dart_tool/build/generated/angular_test/lib/src/errors/test_already_running.template.module.library
{"isEntrypoint":false,"deps":["angular_test|lib/src/errors/test_already_running.dart"],"parts":[],"conditionalDeps":[],"sdkDeps":[],"hasMain":false}